# mysite

./: .gitignore  mysite_data.json  pyproject.toml
blog/: admin.py  feeds.py  models.py  sitemaps.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment.py  0004_comment_tags.py  0005_remove_comment_tags_post_tags.py  0006_trigram_ext.py
blog/templates/blog/: base.html
blog/templates/blog/post/: comment.html  detail.html  list.html  search.html  share.html
blog/templates/blog/post/includes/: comment_form.html
blog/templatetags/: blog_tags.py
mysite/: settings.py  urls.py
