[project]
name = "mysite"
version = "0.1.0"
description = ""
authors = [
    {name = "Ruairi O'Donohoe",email = "58832267+ruairiodonohoe@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "djhtml (>=3.0.8,<4.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "django-taggit (>=6.1.0,<7.0.0)",
    "markdown (>=3.8.2,<4.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
